[package]
name = "libtess2-rs"
version = "0.1.0"
authors = ["songhuaixu <songhuaixu@gmail.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/songhuaixu/libtess2-rs"
description = "good quality polygon tesselator and triangulator"
keywords = ["libtess2", "tesselator", "triangulator"]
categories = ["algorithms"]

[dependencies]
libtess2-sys = "0.1.0"